update maven configuration