@@ -11,17 +11,16 @@
     </parent>
 
     <groupId>io.openapiprocessor.samples</groupId>
-    <artifactId>spring-webflux</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <artifactId>spring-flux-boot-3-java</artifactId>
     <name>spring-webflux sample project</name>
     <description>openapi-processor demo project for spring boot webflux</description>
 
     <properties>
-        <java.version>11</java.version>
-        <maven.compiler.target>11</maven.compiler.target>
-        <maven.compiler.source>11</maven.compiler.source>
+        <java.version>17</java.version>
+        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
 
-        <org.mapstruct.version>1.3.1.Final</org.mapstruct.version>
+        <org.mapstruct.version>1.6.3</org.mapstruct.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -31,6 +30,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webflux</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
 
         <dependency>
@@ -77,13 +81,13 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>2.3.1.RELEASE</version>
+                <version>3.5.8</version>
             </plugin>
 
             <plugin>
                 <groupId>io.openapiprocessor</groupId>
                 <artifactId>openapi-processor-maven-plugin</artifactId>
-                <version>2021.1</version>
+                <version>2024.1</version>
 
                 <dependencies>
                     <dependency>
@@ -115,7 +119,7 @@
                                 <values>
                                     <targetDir>${project.basedir}/target/generated-sources/openapi</targetDir>
                                     <mapping>${project.basedir}/src/api/mapping.yaml</mapping>
-                                    <parser>OPENAPI4J</parser>
+                                    <parser>INTERNAL</parser>
                                     <showWarnings>true</showWarnings>
                                 </values>
                             </options>
@@ -153,8 +157,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
+                    <source>17</source>
+                    <target>17</target>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.mapstruct</groupId>
@@ -204,7 +208,7 @@
             <plugin>
                 <groupId>org.codehaus.gmavenplus</groupId>
                 <artifactId>gmavenplus-plugin</artifactId>
-                <version>1.9.0</version>
+                <version>3.0.2</version>
                 <executions>
                     <execution>
                         <id>test</id>
@@ -248,10 +252,11 @@
 
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version>
+                <version>3.5.2</version>
 
                 <configuration>
                     <useFile>false</useFile>
+                    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
                 </configuration>
 
                 <executions>
@@ -296,7 +301,7 @@
           <dependency>
               <groupId>org.springframework.boot</groupId>
               <artifactId>spring-boot-dependencies</artifactId>
-              <version>2.3.1.RELEASE</version>
+              <version>3.5.11</version>
               <type>pom</type>
               <scope>import</scope>
           </dependency>
@@ -305,7 +310,7 @@
           <dependency>
               <groupId>org.spockframework</groupId>
               <artifactId>spock-bom</artifactId>
-              <version>2.0-M3-groovy-2.5</version>
+              <version>2.4-groovy-4.0</version>
               <type>pom</type>
               <scope>import</scope>
           </dependency>
